<resources>
    <!--    User sign in/registration resources-->
    <string name="app_name">Mentorly</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Register a new account</string>
    <string name="mentorly">Mentorly</string>
    <string name="sign_up_registration">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_username">Account username</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="logout">Logout</string>
    <string name="register_your_account">Register your account</string>
    <string name="password_cap">Password</string>

    <!--    Profile resources-->
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="no_pair_chat_view">Looks like you don\'t have a mentor/mentee yet. Set up a connection in profile to chat!</string>
    <string name="chat">Chat</string>
    <string name="todo">ToDo</string>
    <string name="calendar">Calendar</string>
    <string name="intent_host">cprest</string>
    <string name="intent_scheme">oauth</string>

    <!--    API calls-->
    <string name="request_complete">API Call Successful.</string>
    <string name="request_failed">API Call Failed.</string>

    <!--    Hamburger icon-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--    Screen archetype string resources-->
    <string name="no_todo_view">Your To Do list is empty! Tap the button below to add more items.</string>
    <string name="add_a_to_do">Add a To Do</string>
    <string name="to_do">To Do</string>
    <string name="description_optional">Description (optional)</string>
    <string name="add_item">Add Item</string>
    <string name="select_date">Select date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="to">to</string>
    <string name="send_invite">Send invite</string>
    <string name="or">or</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="files">Files</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="or_click_to_autofill">or click to autofill</string>
    <string name="event_title">Event title</string>
    <string name="create">Create</string>
    <string name="create_event">Create Event</string>
    <string name="capture_new_profile_picture">Capture new profile picture</string>
    <string name="submit">Submit</string>
    <string name="capture">Capture</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="add_event_item">Add event item</string>
    <string name="sign_out_of_google">Sign out of Google</string>
    <string name="mentor_username">Mentor username</string>
    <string name="mentor_mentee_info">Mentor/Mentee Info:</string>
    <string name="click_to_add_a_mentor_mentee">Click to add a mentor/mentee</string>
    <string name="click_to_remove_mentoring_partner">Click to remove mentoring partner</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="preview">Preview</string>
    <string name="try_again_capture">Try again</string>
</resources>