<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_baseline_mail_outline_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_baseline_folder_open_24"
            android:title="@string/files" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_something"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_out"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

    </group>
</menu>