<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_outline_calendar_today_24"
        android:iconTint="@android:color/white"
        android:title="@string/calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/todo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:iconTint="@android:color/white"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom"
        android:title="@string/profile" />

</menu>