<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.ChatFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNoPair"
        android:layout_gravity="center"
        android:text="@string/no_pair_chat_view"
        android:textColor="@android:color/black"
        android:paddingHorizontal="20dp"
        android:gravity="center_horizontal"
        android:elevation="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlChatLayout"
        android:background="@android:color/white">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChat"
            android:transcriptMode="alwaysScroll"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/rlSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <RelativeLayout
            android:id="@+id/rlSend"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:paddingHorizontal="5dp"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/etMessage"
                android:layout_toStartOf="@+id/btSend"
                android:layout_alignBottom="@+id/btSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/message_hint"
                android:inputType="textShortMessage"
                android:imeOptions="actionSend"
                android:importantForAutofill="no" />
            <Button
                android:id="@+id/btSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:layout_alignParentEnd="true"
                android:text="@string/send"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="18sp" >
            </Button>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>